--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
       name="description"
       content="44 Moving Average, Swing Trading Risk Managament Calulation"
     />
-    <meta name="og:title" property="og:title" content="44 Moving Average, Swing Trading Risk Managament Calulation">
+    <meta
+      name="og:title"
+      property="og:title"
+      content="44 Moving Average, Swing Trading Risk Managament Calulation"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
